# phpython

./: .gitignore  INDEX.md  INSTRUCTOR_GUIDE.md  MANIFEST.in  MIGRATION.md  Makefile  PACKAGING.md  QUICKSTART.md  README.md  STRUCTURE.md  __init__.py  board_info.py  check.py  core.py  decay.py  example_divider.py  examples.py  geiger.py  gieger.py  interrupts.py  mcp9808.py  platforms.py  pwm_pin15.py  pyproject.toml  requirements.txt  reset_board.py  scan_i2c.py  serial.py  setup.cfg  setup.py  simple_decay.py  simple_divider.py  starter_micro.py  temp_test.py  test_phpython.py  utils.py  version.py
.claude/: settings.local.json
converted_projects/: CONVERSION_SUMMARY.md  README.md
converted_projects/P1_CollectingData/: decay.py  starter.py
converted_projects/P7_Analog_to_Digital/: irq_counter_micropython.py  irq_counter_phpython.py
converted_projects/P8_Motors/: servo.py
phpython/: __init__.py  core.py  platforms.py  utils.py
