[metadata]
name = phpython
version = 0.1.0
description = A unified abstraction layer for CircuitPython and MicroPython
long_description = file: README.md
long_description_content_type = text/markdown
author = Steve
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
py_modules = core, platforms, utils
